# LieSpline

./: CMakeLists.txt  LICENSE  README.md  build_submodules.sh  install_dependencies.sh  plot.py
cmake_modules/: FindSuiteSparse.cmake  FindTBB.cmake
cmake_modules/eigen3/: Eigen3Source.cmake
data/: initial_calibration.json
data/dataset-calib-imu1_512_16/mav0/cam1/: data.csv
data/dataset-calib-imu1_512_16/mav0/imu0/: data.csv
data/dataset-calib-imu1_512_16/mav0/mocap0/: data.csv
include/: ceres_calib_se3_residuals.h  ceres_calib_spline_se3.h  ceres_calib_spline_split.h  ceres_calib_split_residuals.h  ceres_calibration_spline_se3.h  ceres_lie_residuals.h  ceres_lie_spline.h  ceres_spline_helper_old.h
src/: eval_calib.cpp  eval_lie_spline.cpp
test/: CMakeLists.txt
test/src/: test_ceres_spline_helper_old.cpp
